# userge-federation

./: MANIFEST.in  PKG-INFO  README.md  setup.cfg  setup.py
UsergeAntiSpamApi/: __init__.py  client.py  errors.py  types.py
userge_fed/: __init__.py  client.py
