[metadata]
name = Userge Federation
version = 0.4.0
author = Krishna-Singhal
author_email = ylikehits3@gmail.com
description = Wrapper for https://api.userge.tk
Keywords: userge, federation, api, wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Krishna-Singhal/userge-federation
project_urls =
    Bug Tracker = https://github.com/Krishna-Singhal/userge-federation/issues
    
python_requires = >=3.6